...
                android:id="@+id/share_radio_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/view_only_radio_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="@dimen/minimum_size_for_touchable_area"
                    android:text="@string/share_permission_view_only" />

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/can_edit_radio_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="@dimen/minimum_size_for_touchable_area"
                    android:text="@string/share_permission_can_edit" />

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/file_request_radio_button"
                    android:layout_width="match_parent"
                    android:visibility="gone"
                    android:layout_height="wrap_content"
                    android:minHeight="@dimen/minimum_size_for_touchable_area"
                    android:text="@string/share_permission_file_request" />

...
                    android:text="@string/share_delete_permission"
                    tools:visibility="visible" />

            </LinearLayout>

            <com.google.android.material.materialswitch.MaterialSwitch
                android:id="@+id/share_process_set_password_switch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/minimum_size_for_touchable_area"
                android:text="@string/share_no_password_title"/>

            <com.google.android.material.textfield.TextInputLayout
...
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/standard_half_margin"
                android:minHeight="@dimen/minimum_size_for_touchable_area"
                android:text="@string/share_no_video_verification_label"/>

            <com.google.android.material.materialswitch.MaterialSwitch
                android:id="@+id/share_process_set_exp_date_switch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/standard_half_margin"
                android:minHeight="@dimen/minimum_size_for_touchable_area"
                android:text="@string/share_no_expiration_date_label"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/share_process_select_exp_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:minHeight="@dimen/minimum_size_for_touchable_area"
                android:padding="@dimen/standard_half_padding"
                android:visibility="gone"
...

                </com.google.android.material.textfield.TextInputEditText>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.materialswitch.MaterialSwitch
                android:id="@+id/share_process_hide_download_checkbox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/standard_half_margin"
                android:minHeight="@dimen/minimum_size_for_touchable_area"
                android:text="@string/share_via_link_hide_download"
                android:visibility="gone"
                tools:visibility="visible" />

            <com.google.android.material.materialswitch.MaterialSwitch
                android:id="@+id/share_process_change_name_switch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/standard_half_margin"
                android:minHeight="@dimen/minimum_size_for_touchable_area"
                android:text="@string/link_name" />

...
