...

    <com.google.android.material.bottomsheet.BottomSheetDragHandleView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/menu_share_advanced_permissions"
        style="@style/Widget.App.Button.BottomSheetItem"
        android:layout_width="match_parent"
        android:layout_height="@dimen/bottom_sheet_item_height"
        android:contentDescription="@string/share_settings"
        android:gravity="start|center_vertical"
        android:paddingStart="@dimen/standard_padding"
...
        app:iconGravity="start"
        app:iconPadding="@dimen/standard_padding"
        app:iconSize="@dimen/iconized_single_line_item_icon_size"
        app:iconTint="@color/primary" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/menu_share_send_new_email"
        style="@style/Widget.App.Button.BottomSheetItem"
        android:layout_width="match_parent"
        android:layout_height="@dimen/bottom_sheet_item_height"
        android:contentDescription="@string/share_send_new_email"
        android:gravity="start|center_vertical"
        android:paddingStart="@dimen/standard_padding"
...
        app:iconGravity="start"
        app:iconPadding="@dimen/standard_padding"
        app:iconSize="@dimen/iconized_single_line_item_icon_size"
        app:iconTint="@color/primary" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/menu_share_send_link"
        style="@style/Widget.App.Button.BottomSheetItem"
        android:layout_width="match_parent"
        android:layout_height="@dimen/bottom_sheet_item_height"
        android:contentDescription="@string/share_via_link_send_link_label"
        android:gravity="start|center_vertical"
        android:paddingStart="@dimen/standard_padding"
...
        app:iconPadding="@dimen/standard_padding"
        app:iconSize="@dimen/iconized_single_line_item_icon_size"
        app:iconTint="@color/primary"
        tools:visibility="visible" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/menu_share_unshare"
        style="@style/Widget.App.Button.BottomSheetItem"
        android:layout_width="match_parent"
        android:layout_height="@dimen/bottom_sheet_item_height"
        android:contentDescription="@string/delete_link"
        android:gravity="start|center_vertical"
        android:paddingStart="@dimen/standard_padding"
...
